[package]

name = "yaxpeax-msp430"
version = "0.0.1"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-msp430/"
description = "msp430 decoders for the yaxpeax project"

[dependencies]
yaxpeax-arch = { version = "0.0.2", default-features = false, features = [] }
"termion" = "1.4.0"
"serde" = "*"
"serde_derive" = "*"

[[test]]
name = "test"
path = "test/test.rs"

[features]
default = []

use-serde = []
