[package]

name = "yaxpeax-msp430"
version = "0.0.6"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-msp430/"
description = "msp430 decoders for the yaxpeax project"

[dependencies]
yaxpeax-arch = { version = "0.0.5", default-features = false, features = [] }
"serde" = { version = "1.0", optional = true }
"serde_derive" = { version = "1.0", optional = true }

[[test]]
name = "test"
path = "test/test.rs"

[features]
default = []

use-serde = ["serde", "serde_derive"]
